kube-public/privoxy.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: privoxy
  namespace: kube-public
  labels:
    k8s-app: privoxy
spec:
  selector:
    matchLabels:
      k8s-app: privoxy
  template:
    metadata:
      labels:
        k8s-app: privoxy
    spec:
      hostNetwork: true
      restartPolicy: Always
      # only master
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: Exists
      tolerations:
      - key: node-role.kubernetes.io/control-plane
        operator: Exists
        effect: NoSchedule
      containers:
      - image: docker.io/ajoergensen/privoxy:latest
        imagePullPolicy: IfNotPresent
        command:
        - privoxy
        args:
        - "--no-daemon"
        - "/etc/privoxy/config"
        name: privoxy
        ports: 
        - containerPort: 8118
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/privoxy
          name: config
      volumes:
      - name: config
        configMap:
          name: privoxy
