kube-public/elastic-search.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: kube-public
  labels:
    app: elasticsearch
spec:
  serviceName: elasticsearch
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
        imagePullPolicy: IfNotPresent
        command:
          - bin/elasticsearch
        args:
          - "-Ehttp.host=0.0.0.0"
          - "-Etransport.host=127.0.0.1"
          - "-Ediscovery.type=single-node"
        resources:
          requests:
            cpu: 2
            memory: 2Gi
          limits:
            cpu: 2
            memory: 2Gi
        volumeMounts:
          - name: data
            mountPath: /data
        readinessProbe:
          exec:
            command:
            - curl
            - --fail
            - --silent
            - --output
            - /dev/null
            - --user
            - elastic:elastic
            - localhost:9200
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 4
          failureThreshold: 10
        securityContext:
          runAsUser: 999
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: kube-public
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  selector:
    app: elasticsearch
  ports:
  - port: 9200
    name: elasticsearch
    protocol: TCP
    targetPort: 9200
  - port: 9300
    name: transport
    protocol: TCP
    targetPort: 9300
