kube-public/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: kube-public
  labels:
    app: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: docker.io/mysql:8.0.27
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysqldb
          mountPath: /var/lib/mysql
      volumes:
      - name: mysqldb
        persistentVolumeClaim:
          claimName: mysql
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kube-public
  labels:
    app: mysql
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  selector:
   app: mysql
  ports:
  - name: tcp
    port: 3306
    targetPort: 3306
    protocol: TCP
