kube-public/nfs-provisioner.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-provisioner
  labels:
    app: nfs-provisioner
  namespace: kube-public
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nfs-provisioner
  template:
    metadata:
      labels:
        app: nfs-provisioner
    spec:
      serviceAccountName: nfs-provisioner
      containers:
      - name: nfs-provisioner
        image: gcr.io/k8s-staging-sig-storage/nfs-subdir-external-provisioner:v4.0.0
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 64Mi
        volumeMounts:
        - name: nfs-root
          mountPath: /persistentvolumes
      volumes:
      - name: nfs-root
        nfs:
          server: 192.168.75.6
          path: /opt/nfs
---
apiVersion: v1
kind: Service
metadata:
  name: nfs
  labels:
    app: nfs-provisioner
  namespace: kube-public
spec:
  selector:
    app: nfs-provisioner
  type: ClusterIP
  clusterIP: None
