kube-public/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: kube-public
  labels:
    app: postgres
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: docker.io/library/postgres:15.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgredb
      volumes:
      - name: postgredb
        persistentVolumeClaim:
          claimName: postgres
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kube-public
  labels:
    app: postgres
  annotations:
    prometheus.io/probe: "true"
spec:
  type: ClusterIP
  selector:
   app: postgres
  ports:
  - name: tcp
    port: 5432
    targetPort: 5432
    protocol: TCP
