kube-public/prometheus-blackbox.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-blackbox
  namespace: kube-public
  labels:
    k8s-app: prometheus-blackbox
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: prometheus-blackbox
  template:
    metadata:
      labels:
        k8s-app: prometheus-blackbox
    spec:
      restartPolicy: Always
      enableServiceLinks: false
      containers:
      - name: prometheus-blackbox
        image: docker.io/prom/blackbox-exporter:latest
        imagePullPolicy: IfNotPresent
        args:
        - "--config.file=/config/blackbox.yaml"
        ports:
        - containerPort: 9115
          name: http
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 20m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /health
            port: http
        readinessProbe:
          httpGet:
            path: /health
            port: http
        securityContext:
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
        - mountPath: /config
          name: config-volume
      volumes:
      - name: config-volume
        configMap:
          name: prometheus-configuration
---
kind: Service
apiVersion: v1
metadata:
  name: prometheus-blackbox
  namespace: kube-public
  labels:
    k8s-app: prometheus-blackbox
  annotations:
    prometheus.io/component: "true"
    prometheus.io/port: "9115"
    prometheus.io/probe: "true"
    prometheus.io/http-path: "/-/healthy"
spec:
  type: ClusterIP
  selector:
    k8s-app: prometheus-blackbox
  ports:
  - name: http
    port: 9115
    protocol: TCP
