kube-public/elastic-kibana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  namespace: kube-public
  labels:
    app: kibana
spec:
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      restartPolicy: Always
      containers:
      - name: kibana
        imagePullPolicy: IfNotPresent
        image: docker.elastic.co/kibana/kibana:7.17.9
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits: 
            cpu: 500m
            memory: 1Gi
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 10
          tcpSocket:
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: http
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yml
          subPath: kibana.yml
      volumes:
      - name: config
        configMap:
          name: kibana
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: kube-public
  labels:
    app: kibana
  annotations:
    prometheus.io/port: "5601"
    prometheus.io/probe: "true"
    prometheus.io/http-path: "/api/licensing/info"
spec:
  type: ClusterIP
  selector:
    app: kibana
  ports:
  - port: 80
    targetPort: 5601
    protocol: TCP
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: kibana
   namespace: kube-public
   annotations:
    prometheus.io/probe: "true"
    prometheus.io/path: "/api/licensing/info"
spec:
  ingressClassName: "nginx"
  rules:
  - host: kibana.local.eudore.cn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana
            port:
              number: 5601
